Add Works section

--- a/css/style.css
+++ b/css/style.css
@@ -97,3 +97,131 @@ main {
   padding: 8px;
   border-radius: 50%;
 }
+
+.works-container {
+  background-color: #fff;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 200px, 56px, 568px, repeat(6,386px);
+  row-gap: 24px;
+  padding-inline: 24px;
+}
+.work-title-container {
+  display: flex;
+  align-items: flex-end;
+}
+
+.works-title {
+  color: #1c1a19;
+  font-size: 40px;
+  font-weight: 400;
+  font-family: 'Crete Round', sans-serif;
+  padding-top: 60px;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.works-divider-container {
+  margin-top: 0;
+  margin-bottom: 80px;
+}
+
+hr.works-divider {
+  border-top: 1px solid #212121 ;
+  margin: 0;
+  padding: 0;
+}
+
+.work-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px 12px;
+}
+
+.bg-image {
+  background-image:  url('../images/image1.png');
+  background-repeat:repeat-x;
+  padding-top: 90px;
+}
+
+.light {
+  color: #091e42;
+}
+
+.dark {
+  color: #fff;
+}
+
+.work-content-dark {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.work-title {
+  font-family: 'Crete Round';
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 44px;
+  margin: 0;
+}
+
+.work-text {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  margin: 0;
+}
+
+.work-tag-group {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 12px;
+}
+
+.work-tag {
+  border: 1px solid #8993a4;
+  background-color: #fff;
+  color: #091E42;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  padding: 10px 12px;
+}
+
+.work-tag-dark {
+  background-color: rgba(255, 255, 255, 0.24);
+  color: #fff;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  padding: 10px 12px;
+}
+
+.work-footer-container-light {
+  display: flex;
+}
+
+.button {
+  background-color:#ff6b00 ;
+  color: #fff;
+  font-family: 'Inter', sans-serif;
+  font-size: 17px;
+  font-weight: 700;
+  height: 24px;
+  padding: 12px;
+}
+
+.work-footer-container-dark {
+  width: 100%;
+  background-color: #ff6b00;
+  height: 48px;
+  display: flex;
+  justify-content:center;
+  margin-top: 10px;
+}
