--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,23 @@ main {
   min-height: 100vh;
 }
 
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.button {
+  background-color: #ff6b00;
+  color: #fff;
+  font-family: 'Inter', sans-serif;
+  font-size: 17px;
+  font-weight: 700;
+  height: 24px;
+  padding: 12px;
+  width: fit-content;
+}
+
 .button:hover {
   background-color: #ff6b00;
 }
@@ -87,10 +104,6 @@ main {
   padding: 0;
 }
 
-.social-media-button-group li {
-  list-style-type: none;
-}
-
 .social-media-button {
   background-color: #1c1a19;
   border: 0;
@@ -102,10 +115,12 @@ main {
   background-color: #fff;
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 200px, 56px, 568px, repeat(6,386px);
+  grid-template-rows: 200px, 56px, 568px, repeat(6, 386px);
   row-gap: 24px;
   padding-inline: 24px;
+  padding-block: 120px;
 }
+
 .work-title-container {
   display: flex;
   align-items: flex-end;
@@ -116,7 +131,6 @@ main {
   font-size: 40px;
   font-weight: 400;
   font-family: 'Crete Round', sans-serif;
-  padding-top: 60px;
   margin-bottom: 0;
   padding-bottom: 0;
 }
@@ -127,7 +141,7 @@ main {
 }
 
 hr.works-divider {
-  border-top: 1px solid #212121 ;
+  border-top: 1px solid #212121;
   margin: 0;
   padding: 0;
 }
@@ -139,8 +153,9 @@ hr.works-divider {
 }
 
 .bg-image {
-  background-image:  url('../images/image1.png');
-  background-repeat:repeat-x;
+  background-image: url('../images/image1.png');
+  background-repeat: no-repeat;
+  background-size: cover;
   padding-top: 90px;
 }
 
@@ -161,7 +176,7 @@ hr.works-divider {
 }
 
 .work-title {
-  font-family: 'Crete Round';
+  font-family: 'Crete Round', sans-serif;
   font-size: 32px;
   font-weight: 400;
   line-height: 44px;
@@ -177,7 +192,6 @@ hr.works-divider {
 }
 
 .work-tag-group {
-  list-style: none;
   display: flex;
   margin: 0;
   padding: 0;
@@ -187,7 +201,7 @@ hr.works-divider {
 .work-tag {
   border: 1px solid #8993a4;
   background-color: #fff;
-  color: #091E42;
+  color: #091e42;
   font-family: 'Inter', sans-serif;
   font-weight: 500;
   font-size: 15px;
@@ -207,21 +221,83 @@ hr.works-divider {
   display: flex;
 }
 
-.button {
-  background-color:#ff6b00 ;
-  color: #fff;
-  font-family: 'Inter', sans-serif;
-  font-size: 17px;
-  font-weight: 700;
-  height: 24px;
-  padding: 12px;
-}
-
 .work-footer-container-dark {
   width: 100%;
   background-color: #ff6b00;
   height: 48px;
   display: flex;
-  justify-content:center;
+  justify-content: center;
   margin-top: 10px;
+}
+
+.about-container {
+  background-color: #1c1a19;
+  display: flex;
+  flex-direction: column;
+}
+
+.about-content {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  padding-inline: 24px;
+  height: 652px;
+  background-image: url("../images/illustration-about-me-mobile.png");
+  background-repeat: no-repeat;
+  background-position: 100% 100%;
+}
+
+.about-title {
+  color: #ff6b00;
+  font-family: 'Crete Round', sans-serif;
+  line-height: 88px;
+  font-size: 72px;
+  padding-top: 120px;
+  margin: 0;
+}
+
+.about-text {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  color: #f4f5f7;
+  padding: 0;
+}
+
+.about-divider-container {
+  padding-inline: 24px;
+}
+
+.skills-container {
+  padding: 120px 24px;
+}
+
+.skills-items-title-container {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+  margin: 0;
+}
+
+.skills-items-title {
+  color: #fff;
+  font-family: 'Inter', sans-serif;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 44px;
+  margin-block: 44px;
+}
+
+.skills-item-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.skills-items {
+  color: #fff;
+  font-family: 'Inter', sans-serif;
+  font-size: 22px;
 }
