--- a/css/style.css
+++ b/css/style.css
@@ -10,23 +10,6 @@ main {
   min-height: 100vh;
 }
 
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.button {
-  background-color: #ff6b00;
-  color: #fff;
-  font-family: 'Inter', sans-serif;
-  font-size: 17px;
-  font-weight: 700;
-  height: 24px;
-  padding: 12px;
-  width: fit-content;
-}
-
 .button:hover {
   background-color: #fff5e1;
   color: #f55800;
@@ -111,6 +94,10 @@ ul {
   padding: 0;
 }
 
+.social-media-button-group li {
+  list-style-type: none;
+}
+
 .social-media-button {
   background-color: #1c1a19;
   border: 0;
@@ -122,12 +109,10 @@ ul {
   background-color: #fff;
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 200px, 56px, 568px, repeat(6, 386px);
+  grid-template-rows: 200px, 56px, 568px, repeat(6,386px);
   row-gap: 24px;
   padding-inline: 24px;
-  padding-block: 120px;
 }
-
 .work-title-container {
   display: flex;
   align-items: flex-end;
@@ -138,6 +123,7 @@ ul {
   font-size: 40px;
   font-weight: 400;
   font-family: 'Crete Round', sans-serif;
+  padding-top: 60px;
   margin-bottom: 0;
   padding-bottom: 0;
 }
@@ -148,7 +134,7 @@ ul {
 }
 
 hr.works-divider {
-  border-top: 1px solid #212121;
+  border-top: 1px solid #212121 ;
   margin: 0;
   padding: 0;
 }
@@ -160,9 +146,8 @@ hr.works-divider {
 }
 
 .bg-image {
-  background-image: url('../images/image1.png');
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image:  url('../images/image1.png');
+  background-repeat:repeat-x;
   padding-top: 90px;
 }
 
@@ -183,7 +168,7 @@ hr.works-divider {
 }
 
 .work-title {
-  font-family: 'Crete Round', sans-serif;
+  font-family: 'Crete Round';
   font-size: 32px;
   font-weight: 400;
   line-height: 44px;
@@ -199,6 +184,7 @@ hr.works-divider {
 }
 
 .work-tag-group {
+  list-style: none;
   display: flex;
   margin: 0;
   padding: 0;
@@ -208,7 +194,7 @@ hr.works-divider {
 .work-tag {
   border: 1px solid #8993a4;
   background-color: #fff;
-  color: #091e42;
+  color: #091E42;
   font-family: 'Inter', sans-serif;
   font-weight: 500;
   font-size: 15px;
@@ -228,12 +214,22 @@ hr.works-divider {
   display: flex;
 }
 
+.button {
+  background-color:#ff6b00 ;
+  color: #fff;
+  font-family: 'Inter', sans-serif;
+  font-size: 17px;
+  font-weight: 700;
+  height: 24px;
+  padding: 12px;
+}
+
 .work-footer-container-dark {
   width: 100%;
   background-color: #ff6b00;
   height: 48px;
   display: flex;
-  justify-content: center;
+  justify-content:center;
   margin-top: 10px;
 }
 
