Added form section

--- a/css/style.css
+++ b/css/style.css
@@ -319,3 +319,35 @@ hr.works-divider {
   font-family: 'Inter', sans-serif;
   font-size: 22px;
 }
+
+#form-headline {
+  font-family: 'Inter', sans-serif, 'Courier New', Courier, monospace;
+  font-weight: 700;
+  line-height: 44px;
+  font-size: 32px;
+  text-align: center;
+  color: #172b4d;
+  padding: 24px;
+}
+
+.white-background{
+  background-color: #e5e5e5;
+}
+
+.make-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.inputs{
+  padding: 5px;
+  margin: 5px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #dbd8d7;
+}
+
+.make-flex textarea{
+  background-color: #fbf8f7;
+}
