--- a/css/style.css
+++ b/css/style.css
@@ -322,45 +322,69 @@ hr.works-divider {
 }
 
 #form-headline {
-  font-family: 'Inter', sans-serif, 'Courier New', Courier, monospace;
+  font-family: 'Inter', sans-serif;
   font-weight: 700;
-  line-height: 44px;
   font-size: 32px;
+  line-height: 44px;
   text-align: center;
   color: #172b4d;
-  padding: 24px;
 }
 
-.white-background{
-  background-color: #e5e5e5;
+.white-background {
+  background-color: #fff;
+  padding: 120px 24px;
 }
 
 .make-flex {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 24px;
 }
 
-.inputs{
-  padding: 5px;
-  margin: 5px;
+.inputs {
+  font-family: 'Inter', sans-serif;
+  font-size: 15px;
+  line-height: 24px;
+  width: 90%;
   background-color: transparent;
   border: none;
   border-bottom: 1px solid #dbd8d7;
+  padding: 14px;
 }
 
-.make-flex textarea{
+.make-flex textarea {
   background-color: #fbf8f7;
+  border-bottom: none;
+}
+
+.footer-container {
+  background-color: #fff;
+  border-top: 1px solid #dfe1e6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer-button-group {
-  display:flex;
-  height: 10px;
-  background-color:  #e5e5e5;
+  display: flex;
   justify-content: center;
-  margin-top: 15px;
+  margin-block: 15px;
+  width: 200px;
+  height: 40px;
+  align-items: center;
 }
 
-footer {
-  background-color:  #e5e5e5;
+.footer-social-media-button {
+  padding: 10px;
+}
+
+.footer-bottom-line {
+  box-sizing: border-box;
+  width: 134px;
+  background-color: #0d151e;
+  margin-block: 8px;
+  border-radius: 10px;
+  height: 5px;
 }
