Change images from works sections and correct titles

--- a/css/style.css
+++ b/css/style.css
@@ -472,6 +472,7 @@ ul {
     align-items: center;
     justify-content: center;
     align-content: center;
+    margin-bottom: 90px;
   }
 
   .works-title {
