--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+* {
+  box-sizing: border-box;
+  user-select: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -22,16 +31,15 @@ ul {
 }
 
 .button {
-  box-sizing: border-box;
   background-color: #ff6b00;
   color: #fff;
+  border: 1px solid #f55800;
   font-family: 'Inter', sans-serif;
   font-size: 17px;
   font-weight: 700;
   height: auto;
   padding: 12px;
   width: fit-content;
-  border: none;
   transition-timing-function: ease-in-out;
   transition-duration: 1s;
 }
@@ -40,6 +48,7 @@ ul {
   background-color: #fff5e1;
   color: #f55800;
   border: 1px solid #f55800;
+  cursor: pointer;
 }
 
 .button:active {
@@ -65,6 +74,8 @@ ul {
   align-items: center;
   justify-content: space-between;
   height: 44px;
+  position: sticky;
+  top: 0;
 }
 
 .header-title-container {
@@ -264,7 +275,6 @@ ul {
 }
 
 .work-tag:hover {
-  cursor: pointer;
   transform: scale(1.1);
 }
 
@@ -435,6 +445,47 @@ ul {
   height: 5px;
 }
 
+.menu-mobile-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  height: 100vh;
+  width: 100%;
+  background-color: #3c3a39;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+
+.close-button {
+  color: #fff;
+  background-color: #3c3a39;
+  border: 0;
+  align-self: flex-end;
+  font-size: 30px;
+  padding: 10px 38px 10px 10px;
+}
+
+.menu-button {
+  font-family: 'Inter', sans-serif;
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  line-height: 44px;
+  font-weight: 700;
+}
+
+.menu-menu-list li {
+  border-bottom: 1px solid #6f6c6b;
+  padding: 15px;
+  margin-inline: 24px;
+}
+
+.menu-menu-list ul {
+  padding: 10px;
+}
+
 .lg-none {
   display: flex;
 }
@@ -443,7 +494,7 @@ ul {
   display: none;
 }
 
-@media screen and (min-device-width: 768px) {
+@media screen and (min-width: 768px) {
   .sm-none {
     display: flex;
   }
@@ -560,11 +611,39 @@ ul {
   }
 
   .data-image {
-    background-image: url('../images/Image-DataDashboard.png');
+    background: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%), url('../images/Snapshoot-Data.png');
+    background-size: 200%;
+    background-position: 30% 20%;
+  }
+
+  .data-image:hover {
+    background: url('../images/Snapshoot-Data.png');
+    background-size: 200%;
+    background-position: 30% 20%;
   }
 
   .website-image {
-    background-image: url('../images/Image-WebsitePortfolio.png');
+    background: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%), url('../images/Snapshoot-Website.png');
+    background-size: 200%;
+    background-position: 30% 20%;
+  }
+
+  .website-image:hover {
+    background: url('../images/Snapshoot-Website.png');
+    background-size: 200%;
+    background-position: 30% 20%;
+  }
+
+  .professional-image {
+    background: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%), url('../images/Snapshoot-Professional.png');
+    background-size: 200%;
+    background-position: 30% 20%;
+  }
+
+  .professional-image:hover {
+    background: url('../images/Snapshoot-Professional.png');
+    background-size: 200%;
+    background-position: 30% 20%;
   }
 
   .about-container {
@@ -650,4 +729,231 @@ ul {
 
 .get-in-touch-form {
   width: 90%;
+}
+
+.display-none {
+  display: none;
+}
+
+.modal {
+  box-sizing: border-box;
+  background-color: rgba(151, 148, 147, 0.05);
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 999;
+  backdrop-filter: blur(6px);
+}
+
+.modal-content {
+  background-color: #fff;
+  border: 1px solid #dfe1e6;
+  top: 20px;
+  left: 20px;
+  right: 20px;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  gap: 40px;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-title-content {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.modal-title {
+  font-family: 'Crete Round', sans-serif;
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 44px;
+  color: #172b4d;
+  align-self: flex-start;
+  margin: 0;
+}
+
+.modal-tags {
+  display: flex;
+  gap: 8px;
+}
+
+.modal-tag {
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 600;
+  padding: 8px;
+  align-self: center;
+}
+
+.modal-button-close {
+  background-color: transparent;
+  border: 0;
+  color: #67798e;
+  font-size: 20px;
+  align-self: flex-start;
+  position: absolute;
+  right: 1px;
+  top: 1px;
+}
+
+.modal-button-close:hover {
+  cursor: pointer;
+}
+
+.modal-body {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.modal-image-container {
+  align-self: center;
+}
+
+.modal-image {
+  flex-grow: 1;
+  max-width: 100%;
+  max-height: 220px;
+  margin: 0;
+  padding: 0;
+}
+
+.modal-text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+}
+
+.modal-text {
+  flex-grow: 3;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  color: #344563;
+  margin: 0;
+}
+
+.modal-buttons {
+  display: flex;
+  gap: 7px;
+  margin-top: 16px;
+}
+
+.modal-footer-button {
+  display: flex;
+  gap: 15px;
+  font-size: 14px;
+  padding: 10px;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .modal-content {
+    top: 50%;
+    left: 50%;
+    right: auto;
+    bottom: auto;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 48px 48px rgba(37, 47, 137, 0.08);
+    min-height: 630px;
+    width: 90%;
+  }
+
+  .modal-header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .modal-title-content {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  .modal-title {
+    font-family: 'Crete Round', sans-serif;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 44px;
+    color: #172b4d;
+    align-self: flex-start;
+    margin: 0;
+  }
+
+  .modal-tags {
+    display: flex;
+    gap: 8px;
+  }
+
+  .modal-button-close {
+    background-color: transparent;
+    border: 0;
+    color: #67798e;
+    font-size: 20px;
+    align-self: flex-start;
+  }
+
+  .modal-body {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+  }
+
+  .modal-image {
+    flex-grow: 1;
+    max-height: max-content;
+    max-width: max-content;
+  }
+
+  .modal-text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: space-between;
+  }
+
+  .modal-text {
+    flex-grow: 3;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+    color: #344563;
+    margin: 0;
+  }
+
+  .modal-buttons {
+    display: flex;
+    gap: 7px;
+  }
+
+  .modal-footer-button {
+    display: flex;
+    gap: 15px;
+  }
+}
+
+.pointer {
+  cursor: pointer;
+  padding-inline: 0;
+  padding-bottom: 0;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
+.error {
+  font-family: 'Inter', sans-serif;
+  color: #900;
+  margin-top: -22px;
 }
